notification drop-down fix overflow for remove button

--- a/app/static/css/layout_notification.css
+++ b/app/static/css/layout_notification.css
@@ -69,7 +69,7 @@
 }
 
 .dropdown-notification {
-    white-space: normal;
+    white-space: normal!important;
 }
 .notification-body{
     margin-bottom: 20px;
